tcw3/designer/tests/bad/const_uninitable.tcwdl
pub comp crate::Comp1 {
    // `field` has no way to initialize
    const field: u32;
    //~^ ERROR Must have a default value or a setter because otherwise it's impossible to initialize
}
